# phonectl

./: .gitignore  Moto_G71_5G_GSI_Flash_Guide.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md
phonectl/: __init__.py  __main__.py  cli.py  tui.py
phonectl/ai/: __init__.py  base.py  claude.py  community.py  gemini.py  ollama.py
phonectl/commands/: __init__.py  _helpers.py  backup_cmds.py  diagnose_cmds.py  firmware_cmds.py  flash.py  info.py  security_cmds.py  storage_cmds.py  tune_cmds.py
phonectl/config/: bloatware.yaml  diagnosis_rules.yaml  gsi_versions.yaml  profiles.yaml  protected_apps.yaml  stalkerware.yaml  vendors.yaml  warranty.yaml
phonectl/core/: adb.py  anomaly.py  audit.py  backup.py  device.py  diagnose.py  fastboot.py  report.py  reset.py  safety.py  security.py  stalkerware.py  state.py  storage.py  tune.py  verify.py
phonectl/firmware/: compat_fetcher.py  downloader.py  gsi.py  sources.py
phonectl/vendors/: base.py  google.py  motorola.py  nokia.py  registry.py  samsung.py
tests/: conftest.py  test_cli.py  test_compat_fetcher.py  test_registry.py  test_safety.py  test_security.py  test_stalkerware.py  test_storage.py  test_vendors.py
