[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phonectl"
version = "0.2.0"
description = "Universal Android Phone Lifecycle Manager"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "psahoo" },
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
ai = ["google-genai>=1.51.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
phonectl = "phonectl.cli:cli"

[tool.setuptools.packages.find]
include = ["phonectl*"]

[tool.setuptools.package-data]
phonectl = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
